# amalthea

./: .amalthea  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  knowledge-base.json
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  interactive.rs
src/core/: config.rs  error.rs  types.rs
src/fuzzing/: data_generator.rs  mod.rs  payload_fuzzer.rs  security_fuzzer.rs
src/providers/: anthropic.rs  gemini.rs  legacy.rs  local.rs  mod.rs  openai.rs  universal.rs
src/reports/: html.rs  mod.rs
src/security/: mod.rs
src/specs/: mod.rs  openapi.rs  postman.rs
src/testing/: export.rs  generator.rs  knowledge_base.rs  mod.rs
src/utils/: http.rs  mod.rs
